--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,12 @@
-<h1>Display your Pirate here</h1>
+<h1>Pirates</h1>
 
+<h3>Name: <%= @pirate.name %></h3><br>
+<h3>Weight: <%= @pirate.weight %></h3><br>
+<h3>Height: <%= @pirate.height %></h3>
 
-<h2>Display your first ship here</h2>
-
-
-<h2>Display your second ship here</h2>
+<h2>Ships</h2>
+<% @ships.each do |ship| %>
+<p>Name: <%= ship.name %></p><br>
+<p>Type: <%= ship.type %></p><br>
+<p>Booty: <%= ship.booty %></p>
+<% end %>
